--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-phone-number-input": "^3.4.12",
-    "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
